--- a/css/verthandi.css
+++ b/css/verthandi.css
@@ -1,4 +1,20 @@
 *
 {
     font-family: sans-serif;
+    padding: 0;
+    margin: 0;
+}
+
+h1
+{
+    background: #9c9;
+    border-bottom: 0.4em solid #cfc;
+    padding: 2em 1em 1em 1em;
+    color: #fff;
+    font-weight: bold;
+}
+
+p
+{
+    margin: 1em;
 }
